fixed spacing on game css

--- a/styles/game.css
+++ b/styles/game.css
@@ -16,17 +16,22 @@ body {
 }
 #wrapper
 {
+  padding: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
     margin-left: 17%;
     margin-right: 10%;
     width: 80%;
-    height:300px;
-    padding: 0;
+    height:30px;
+
 }
 
 #genre {
     color: white;
     font-family: 'Play', sans-serif;
     text-shadow: 9px 4px black;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -50,6 +55,8 @@ h2 {
   transition: all 500ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 #question-right {
+    margin-top: 10px;
+    margin-bottom: 10px;
     transition: opacity .25s ease-in-out;
     opacity = 0;
     -webkit-box-sizing: content-box;
@@ -92,6 +99,8 @@ h1 {
   font: normal normal bold 100px/normal "Atomic Age", Helvetica, sans-serif;
   color: black;
   text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
   -o-text-overflow: clip;
   text-overflow: clip;
   text-shadow: 1px 5px 1px rgb(77,162,252) , -1px -1px 0 rgb(77,162,252) , 1px -1px 0 rgb(77,162,252) , -1px 1px 0 rgb(77,162,252) , 4px 4px 8px rgb(44,88,137) , -4px 4px 8px rgb(44,88,137) , 4px -4px 8px rgb(44,88,137) , -4px -4px 8px rgb(44,88,137) ;
@@ -106,6 +115,8 @@ h1 {
   font-family: 'Play', sans-serif;
   color: white;
   text-shadow: 4px 4px black;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #button:hover {
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
