--- a/styles/profile.css
+++ b/styles/profile.css
@@ -44,7 +44,7 @@ table td{
   font-family: 'Play', sans-serif;
   text-shadow: 4px 4px black;
   margin-left: 20px;
-  border-style: double;
+  
 
 
 }
